# MINA

./: .cruft.json  .gitignore  .readthedocs.yaml  Agents.md  CHANGELOG.md  GetStarted.ipynb  GetStarted_Group.ipynb  LICENSE  README.md  mina_v0_env.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: pages.yaml  release.yaml  test.yaml
docs/: api.md  changelog.md  conf.py  contributing.md  index.md  references.md  tutorials.md
docs/_static/css/: custom.css
docs/api/: down.md  index.md  integration.md  pl.md  up.md
docs/notebooks/: EvaluationOfModels.ipynb  GetStarted_FunctionalViews.ipynb  GetStarted_FunctionalViews_guided.ipynb  GetStarted_MOFA.ipynb  GetStarted_SOFA.ipynb  GetStarted_groups.ipynb  GetStarted_spatial.ipynb  example.ipynb
src/mina/: __init__.py
src/mina/down/: __init__.py  tl.py  utils.py
src/mina/integration/: __init__.py  patpy.py
src/mina/pl/: __init__.py  pl.py
src/mina/up/: __init__.py  filt.py  pp.py  utils.py
tests/: test_basic.py  test_down_tl_associations.py  test_up_filt.py  test_up_pp_utils.py
