[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "minatraining"
version = "0.0.1"
description = "v0 of Multicellular INtegration Analysis"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Klaus Kruger", email = "klaus.kruger@stud.uni-heidelberg.de" },
]
authors = [
  { name = "Klaus Kruger" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "adjusttext==1.3",
  "anndata==0.12.2",
  "array-api-compat==1.12",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.3",
  "contourpy==1.3.3",
  "crc32c==2.7.1",
  "cycler==0.12.1",
  "decoupler==2.1.1",
  "docrep==0.3.2",
  "donfig==0.8.1.post1",
  "dtw-python==1.5.3",
  "filelock==3.19.1",
  "fonttools==4.59.2",
  "fsspec==2025.9",
  "gpytorch==1.14",
  "h5py==3.14",
  "idna==3.10",
  "jaxtyping==0.3.2",
  "jinja2==3.1.6",
  "joblib==1.5.2",
  "kiwisolver==1.4.9",
  "legacy-api-wrap==1.4.1",
  "legendkit==0.3.6",
  "linear-operator==0.6",
  "llvmlite==0.44",
  "markupsafe==3.0.2",
  "marsilea==0.5.5",
  "matplotlib==3.10.6",
  "mizani==0.14.2",
  "mofaflex @ git+https://github.com/bioFAM/mofaflex.git@main",
  "mpmath==1.3",
  "mudata==0.3.2",
  "natsort==8.4",
  "networkx==3.5",
  "numba==0.61.2",
  "numcodecs==0.16.2",
  "numpy==2.2.6",
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cuda-cupti-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cudnn-cu12==9.10.2.21",
  "nvidia-cufft-cu12==11.3.3.83",
  "nvidia-cufile-cu12==1.13.1.3",
  "nvidia-curand-cu12==10.3.9.90",
  "nvidia-cusolver-cu12==11.7.3.90",
  "nvidia-cusparse-cu12==12.5.8.93",
  "nvidia-cusparselt-cu12==0.7.1",
  "nvidia-nccl-cu12==2.27.3",
  "nvidia-nvjitlink-cu12==12.8.93",
  "nvidia-nvtx-cu12==12.8.90",
  "opt-einsum==3.4",
  "pandas==2.3.2",
  "patsy==1.0.1",
  "pillow==11.3",
  "plotnine==0.15",
  "pyarrow==21",
  "pynndescent==0.5.13",
  "pyparsing==3.2.3",
  "pyro-api==0.1.2",
  "pyro-ppl==1.9.1",
  "python==3.13.*",
  "pytz==2025.2",
  "pyyaml==6.0.2",
  "requests==2.32.5",
  "scanpy==1.11.4",
  "scikit-learn==1.7.1",
  "scipy==1.15.3",
  "seaborn==0.13.2",
  "session-info2==0.2.1",
  "setuptools==80.9",
  "statsmodels==0.14.5",
  "sympy==1.14",
  "threadpoolctl==3.6",
  "torch==2.8",
  "tqdm==4.67.1",
  "triton==3.4",
  "tzdata==2025.2",
  "umap-learn==0.5.9.post2",
  "urllib3==2.5",
  "wadler-lindig==0.1.7",
  "zarr==3.1.2",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.test = [
  "coverage>=7.10",
  "pytest",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://MINAtraining.readthedocs.io/"
urls.Homepage = "https://github.com/KlausKruger/MINAtraining"
urls.Source = "https://github.com/KlausKruger/MINAtraining"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/mina" ]

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.10", "3.13" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.13" ]

[tool.hatch.envs.hatch-test]
features = [ "dev", "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "mina" ]
patch = [ "subprocess" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
